# edge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LLM.md  Makefile  README.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  wasm.yml
docs/: CNAME  index.html  install.sh
edge-cli/: Cargo.toml
edge-cli/src/: loader.rs  main.rs
edge-cli/src/cmd/: bench.rs  info.rs  mod.rs  run.rs  serve.rs
edge-core/: Cargo.toml
edge-core/src/: lib.rs  model.rs  sampling.rs  session.rs  tokenizer.rs
edge-wasm/: Cargo.toml  index.html
edge-wasm/src/: lib.rs  worker.js
