[package]
name = "edge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Hanzo Edge on-device inference"

[[bin]]
name = "hanzo-edge"
path = "src/main.rs"

[dependencies]
edge-core = { path = "../edge-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hf-hub = "0.4"
indicatif = "0.17"

[features]
default = []
metal = ["edge-core/metal"]
cuda = ["edge-core/cuda"]
