[package]
name = "hanzo-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hanzo Edge CLI — run AI models locally on any device"
homepage = "https://edge.hanzo.ai"
keywords = ["ai", "inference", "edge", "llm", "gguf"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "hanzo-edge"
path = "src/main.rs"

[dependencies]
hanzo-edge-core = { path = "../edge-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hf-hub = "0.4"
indicatif = "0.17"
tokio-stream = "0.1"
futures-core = "0.3"

[features]
default = []
metal = ["hanzo-edge-core/metal"]
cuda = ["hanzo-edge-core/cuda"]
