[package]
name = "hanzo-edge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core inference runtime for Hanzo Edge — on-device AI with GGUF models"
homepage = "https://edge.hanzo.ai"
keywords = ["ai", "inference", "edge", "llm", "gguf"]
categories = ["science", "command-line-utilities"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[features]
default = ["cpu"]
cpu = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
