[package]
name = "hanzo-edge-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hanzo Edge WebAssembly — run AI models in the browser"
homepage = "https://edge.hanzo.ai"
keywords = ["ai", "inference", "edge", "llm", "gguf"]
categories = ["science", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true, features = ["unstable_wasm"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1"
